added html parser

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "homepage": "https://spark33.github.io/Singapore/",
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "react-html-parser": "^2.0.2"
   }
 }
